Refactor: send() 오류인 IllegalStateException추가, emitter 삭제 후 추가로 변경