@@ -9,7 +9,6 @@ import java.io.IOException;
 import java.util.Deque;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.concurrent.atomic.AtomicLong;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
@@ -35,16 +34,17 @@ public class SseServiceImpl implements SseService {
 
     CopyOnWriteArrayList<SseEmitter> emitters = sseRepository.findOrCreateEmitters(userId);
 
+    emitter.onCompletion(() -> sseRepository.removeEmitter(userId, emitter));
+    emitter.onTimeout(() -> sseRepository.removeEmitter(userId, emitter));
+    emitter.onError(e -> sseRepository.removeEmitter(userId, emitter));
+
     if(emitters.size() >= MAX_EMITTER_COUNT) {
-      SseEmitter removed = emitters.removeFirst();
+      SseEmitter removed = emitters.remove(0);
       removed.complete();
       log.info("최대 emitter 수를 초과하여 오래된 emitter 제거됨 : userId={}, size={}", userId, emitters.size());
     }
     sseRepository.addEmitter(userId, emitter);
 
-    emitter.onCompletion(() -> sseRepository.removeEmitter(userId, emitter));
-    emitter.onTimeout(() -> sseRepository.removeEmitter(userId, emitter));
-    emitter.onError(e -> sseRepository.removeEmitter(userId, emitter));
 
     sseSender.sendToClient(userId, emitter, eventId, "connect", "Sse Connected");
 
@@ -100,7 +100,7 @@ public class SseServiceImpl implements SseService {
             emitters.forEach(emitter -> {
               try{
                 emitter.send(SseEmitter.event().name("heartbeat").data("data"));
-              } catch (IOException e){
+              } catch (IOException | IllegalStateException e){
                 log.debug("user [{}]에 대한 연결이 실패하여 emitter를 삭제", userId);
                 sseRepository.removeEmitter(userId, emitter);
               }
